--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 isolated_build = true
 skipsdist = True
-; envlist = py35, py36, py37, py38
-envlist = py36
+envlist = py36, py37, py38
 
 [testenv]
 whitelist_externals = poetry
