--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ loguru = "^0.6"
 plumbum = "^1.7"
 single-source = "^0.3"
 git-aggregator = "^2.1"
+docker = "^5.0"
 pyyaml = "5.4.1"
 
 [tool.poetry.dev-dependencies]
