--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,10 @@ install_tools:
     - poetry install -v
     - echo $PATH
     - echo $PYTHONPATH
+    - apt-get update
+    - apt-get install docker-ce docker-ce-cli containerd.io
+    # - sudo apt-get install ca-certificates curl gnupg lsb-release
+    # - curl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
 
 black:
   stage: linting
