--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,6 @@ pytest:
     - poetry run pytest --version
 
       # Create a postgresql container
-    - docker run -v odoo-data:/var/lib/odoo -d -p 8069:8069 --name odoo --link db:db -t odoo
+    - docker run -d -e POSTGRES_USER=odoo -e POSTGRES_PASSWORD=odoo -e POSTGRES_DB=postgres --name db postgres:13
 
     - poetry run pytest --cov odoo_openupgrade_wizard -v
