[ADD] ensure_database function ; [IMP] tests with SQL request

--- a/tests/output_A_expected/config.yml
+++ b/tests/output_A_expected/config.yml
@@ -1,7 +1,11 @@
+
 project_name: test-cli
 
 host_odoo_xmlrpc_port: 9069
+
 host_postgres_port: 9432
+
+default_country_code: FR
 
 odoo_versions:
 
