--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,4 +44,5 @@ pytest:
       # Create a postgresql container
     - docker run -d -e POSTGRES_USER=odoo -e POSTGRES_PASSWORD=odoo -e POSTGRES_DB=postgres --publish 9542:5432 --name db postgres:13
 
-    - poetry run pytest --cov odoo_openupgrade_wizard -v
+    - poetry run pytest --cov odoo_openupgrade_wizard -v\
+      tests/cli_A_init_test.py
