--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,9 @@ variables:
   DOCKER_DRIVER: overlay2
   DOCKER_TLS_CERTDIR: ""
 
+
+
+
 services:
   - docker:18.09-dind
 
@@ -42,7 +45,12 @@ pytest:
     - echo $PYTHONPATH
     - poetry run pytest --version
 
-    - poetry run pytest --cov odoo_openupgrade_wizard --verbose --verbose --exitfirst tests/cli_A_init_test.py tests/cli_B_01_get_code_test.py tests/cli_B_02_docker_build_test.py tests/cli_B_03_run_test.py tests/cli_B_05_execute_script_sql_test.py
+    # - poetry run pytest --cov odoo_openupgrade_wizard --verbose --verbose --exitfirst tests/cli_A_init_test.py tests/cli_B_01_get_code_test.py tests/cli_B_02_docker_build_test.py tests/cli_B_03_run_test.py tests/cli_B_05_execute_script_sql_test.py
+    - poetry run pytest --verbose --verbose tests/cli_A_init_test.py
+    # - poetry run pytest --verbose --verbose tests/cli_B_01_get_code_test.py
+    # - poetry run pytest --verbose --verbose tests/cli_B_02_docker_build_test.py
+    # - poetry run pytest --verbose --verbose tests/cli_B_03_run_test.py
+    # - poetry run pytest --verbose --verbose tests/cli_B_05_execute_script_sql_test.py
 
     # tests/cli_B_04_execute_script_python_test.py
     # tests/cli_B_06_upgrade_test.py
