--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,3 +34,8 @@ repos:
   #   rev: v1.0.0
   #   hooks:
   #     - id: check-gitlab-ci
+  # - repo: https://github.com/kadrach/pre-commit-gitlabci-lint
+  #   rev: 22d0495c9894e8b27cc37c2ed5d9a6b46385a44c
+  #   hooks:
+  #     - id: gitlabci-lint
+  #     # args: ["https://custom.gitlab.host.com"]
