--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,11 +37,11 @@ pytest:
     - echo $PYTHONPATH
     - poetry run pytest --version
 
-    - poetry run pytest --verbose --verbose tests/cli_A_init_test.py
-    # - poetry run pytest --verbose --verbose tests/cli_B_01_get_code_test.py
-    # - poetry run pytest --verbose --verbose tests/cli_B_02_docker_build_test.py
-    # - poetry run pytest --verbose --verbose tests/cli_B_03_run_test.py
-    # - poetry run pytest --verbose --verbose tests/cli_B_04_execute_script_python_test.py
-    # - poetry run pytest --verbose --verbose tests/cli_B_05_execute_script_sql_test.py
-    # - poetry run pytest --verbose --verbose tests/cli_B_06_upgrade_test.py
-    # - poetry run pytest --verbose --verbose tests/cli_B_07_generate_module_analysis_test.py
+    - poetry run pytest --verbose --verbose tests/cli_01_init_test.py
+    - poetry run pytest --verbose --verbose tests/cli_02_get_code_test.py
+    - poetry run pytest --verbose --verbose tests/cli_03_docker_build_test.py
+    - poetry run pytest --verbose --verbose tests/cli_04_run_test.py
+    - poetry run pytest --verbose --verbose tests/cli_05_execute_script_python_test.py
+    - poetry run pytest --verbose --verbose tests/cli_06_execute_script_sql_test.py
+    - poetry run pytest --verbose --verbose tests/cli_07_upgrade_test.py
+    - poetry run pytest --verbose --verbose tests/cli_08_generate_module_analysis_test.py
