--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,8 @@ black:
 pytest:
   stage: tests
   script:
-    - apk add python3.6 python3.6-dev
+    # Install the latest pythhon version supported by this librairy
+    - apk add python3.9 python3.9-dev
     - apk add gcc g++ libffi-dev
     - apk add git
     - python3 -m venv /.gitlab-ci-venv
