--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ pytest:
   stage: tests
   script:
     # Install the latest pythhon version supported by this librairy
-    - apk add python3 python3-dev
+    - apk add python3==~3.9 python3-dev==~3.9
     - apk add gcc g++ libffi-dev
     - apk add git
     - python3 -m venv /.gitlab-ci-venv
