--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,11 +49,14 @@ pytest:
       tests/cli_02_get_code_test.py
       tests/cli_03_docker_build_test.py
       tests/cli_04_run_test.py
+      tests/cli_05_execute_script_python_test.py
       tests/cli_06_execute_script_sql_test.py
-    # Disabled : calling OdooRPC on mounted container
-    # in a container (gitlab) does'nt seems to work.
+      tests/cli_07_upgrade_test.py
 
-    # - poetry run pytest --verbose --verbose tests/cli_05_execute_script_python_test.py
-    # - poetry run pytest --verbose --verbose
-    # - poetry run pytest --verbose --verbose tests/cli_07_upgrade_test.py
-    # - poetry run pytest --verbose --verbose tests/cli_08_generate_module_analysis_test.py
+    # Disabled test on gitlab-ci :
+    # The following tests should work locally but doesn't on gitlab-ci
+    # because calling OdooRPC on mounted container
+    # in a container (gitlab) doesn't work.
+
+      # tests/cli_20_install_from_csv_test.py
+      # tests/cli_21_generate_module_analysis_test.py
