--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,7 @@ pytest:
       tests/cli_05_execute_script_python_test.py
       tests/cli_06_execute_script_sql_test.py
       tests/cli_07_upgrade_test.py
+      tests/cli_08_estimate_workload_test.py
 
     # Disabled test on gitlab-ci :
     # The following tests should work locally but doesn't on gitlab-ci
