--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
 odoo-openupgrade-wizard = "odoo_openupgrade_wizard.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.6.3"
 click = "^7.0"
 click-loglevel = "^0.4"
 odoorpc = "^0.8"
@@ -40,6 +40,7 @@ git-aggregator = "^2.1"
 docker = "^5.0"
 pyyaml = "5.4.1"
 GitPython = "^3.1"
+pygount = "^1.4"
 
 [tool.poetry.dev-dependencies]
 pytest = [
