je suis un toquard avec un 'C'

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,8 @@ pre-commit:
 
 pytest:
   stage: test
+  tags:
+    - shell
   script:
     - python3 -m venv /.gitlab-ci-venv
     - source /.gitlab-ci-venv/bin/activate
