--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,6 @@ classifiers = [
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
     "Framework :: Odoo",
 ]
 
@@ -29,7 +28,7 @@ classifiers = [
 odoo-openupgrade-wizard = "odoo_openupgrade_wizard.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.6.3"
+python = ">=3.6.3,<4.0.0"
 click = "^7.0"
 click-loglevel = "^0.4"
 odoorpc = "^0.8"
