--- a/tests/data/output_expected/config.yml
+++ b/tests/data/output_expected/config.yml
@@ -49,3 +49,15 @@ workload_settings:
 
     # Porting 10 lines of XML costs 1 minute
     port_per_xml_line_time: 0.10
+
+    # Minimal time for Openupgrade PR
+    open_upgrade_minimal_time: 10
+
+    # time for a line of model in the openupgrade_analysis.txt
+    openupgrade_model_line_time: 10
+
+    # Time for a line of field in the openupgrade_analysis.txt
+    openupgrade_field_line_time: 5
+
+    # Time for a line of XML in the openupgrade_analysis.txt
+    openupgrade_xml_line_time: 0.1
