[FIX] set jinja2 as main library to install

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,15 +31,16 @@ odoo-openupgrade-wizard = "odoo_openupgrade_wizard.cli:main"
 python = ">=3.6.3,<4.0.0"
 click = "^7.0"
 click-loglevel = "^0.4"
-odoorpc = "^0.8"
-loguru = "^0.6"
-plumbum = "^1.7"
-single-source = "^0.3"
-git-aggregator = "^2.1"
 docker = "^5.0"
-pyyaml = "5.4.1"
+git-aggregator = "^2.1"
 GitPython = "^3.1"
+jinja2 = "^3.0"
+loguru = "^0.6"
+odoorpc = "^0.8"
+plumbum = "^1.7"
 pygount = "^1.4"
+pyyaml = "5.4.1"
+single-source = "^0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = [
