--- a/tests/data/output_expected/config.yml
+++ b/tests/data/output_expected/config.yml
@@ -1,7 +1,8 @@
 project_name: test-cli
 
 postgres_image_name: postgres:13
-postgres_container_name: test-cli-db
+postgres_container_name: test-cli-container-postgres
+postgres_volume_name: test-cli-volume-postgres
 
 odoo_host_xmlrpc_port: 9069
 odoo_default_country_code: FR
