[FIX] add importlib-resources as a dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ python = ">=3.6.3,<4.0.0"
 click = "^7.0"
 click-loglevel = "^0.4"
 docker = "^5.0"
+importlib-resources = "^5.4"
 git-aggregator = "^2.1"
 GitPython = "^3.1"
 jinja2 = "^3.0"
