[IMP] add local_user_id in build call.

--- a/odoo_openupgrade_wizard/templates/odoo/12.0/Dockerfile
+++ b/odoo_openupgrade_wizard/templates/odoo/12.0/Dockerfile
@@ -66,4 +66,9 @@ RUN apt-get update || true \
 RUN python3 -m pip install --no-cache-dir -r /odoo_python_requirements.txt
 RUN python3 -m pip install --no-cache-dir -r /extra_python_requirements.txt
 
-RUN useradd --uid 1000 odoo
+# 5. <OOW> Get local user id and set it to the odoo user
+ARG LOCAL_USER_ID
+
+RUN useradd --uid $LOCAL_USER_ID odoo
+
+USER odoo
