[DOC] upgrade documentation, to explain Dockerfile creation (and current issues) [ADD] 11.0 docker file : Add Dockerfile, based on https://raw.githubusercontent.com/odoo/odoo/11.0/setup/package.dfsrc [FIX] 12.0 docker file : use correct Dockerfile, based on https://raw.githubusercontent.com/odoo/odoo/12.0/setup/package.dfsrc [FIX] 13.0 docker file : use correct Dockerfile, based on https://raw.githubusercontent.com/odoo/odoo/13.0/setup/package.dfsrc [FIX] 14.0 docker file : use correct Dockerfile, based on https://raw.githubusercontent.com/odoo/odoo/14.0/setup/package.dfsrc [FIX] 15.0 docker file : use correct Dockerfile, based on https://raw.githubusercontent.com/odoo/odoo/15.0/setup/package.dfsrc [FIX] 16.0 docker file : use correct Dockerfile, based on https://raw.githubusercontent.com/odoo/odoo/16.0/setup/package.dfsrc

--- a/odoo_openupgrade_wizard/templates/odoo/11.0/Dockerfile
+++ b/odoo_openupgrade_wizard/templates/odoo/11.0/Dockerfile
@@ -1,4 +1,4 @@
-# <OOW> : Copy of https://github.com/odoo/odoo/blob/12.0/setup/package.dfsrc
+# <OOW> : Copy of https://github.com/odoo/odoo/blob/11.0/setup/package.dfsrc
 FROM debian:stretch
 
 RUN apt-get update && \
@@ -18,7 +18,7 @@ RUN apt-get update -qq &&  \
         postgresql-server-dev-all \
         postgresql-client \
         adduser \
-        libsass0 \
+        node-less \
         libxml2-dev \
         libxslt1-dev \
         libldap2-dev \
