--- a/odoo_openupgrade_wizard/templates/odoo/14.0/Dockerfile
+++ b/odoo_openupgrade_wizard/templates/odoo/14.0/Dockerfile
@@ -1,51 +1,30 @@
-# <OOW> : Copy of https://github.com/odoo/odoo/blob/14.0/setup/package.dfdebian
-
+# <OOW> : Copy of https://github.com/odoo/odoo/blob/14.0/setup/package.dfsrc
 FROM debian:buster
 
-# 1. <OOW> Official Odoo Dockerfile.
-# Removing: postgresql, locales, rsync
+RUN apt-get update && \
+    apt-get install -y locales && \
+    rm -rf /var/lib/apt/lists/*
 
-ENV DEBIAN_FRONTEND noninteractive
+# Reconfigure locales such that postgresql uses UTF-8 encoding
+RUN dpkg-reconfigure locales && \
+    locale-gen C.UTF-8 && \
+    /usr/sbin/update-locale LANG=C.UTF-8
+ENV LC_ALL C.UTF-8
 
 RUN apt-get update -qq &&  \
     apt-get upgrade -qq -y && \
-    apt-get install -qq -y\
-        adduser \
-        dh-python \
-        packaging-dev \
+    apt-get install \
+        postgresql \
+        postgresql-server-dev-all \
         postgresql-client \
-        python3 \
-        python3-babel \
-        python3-dateutil \
-        python3-decorator \
-        python3-docutils \
-        python3-gevent \
-        python3-pil \
-        python3-jinja2 \
-        python3-libsass \
-        python3-lxml \
-        python3-mako \
-        python3-ofxparse \
-        python3-passlib \
-        python3-polib \
-        python3-psutil \
-        python3-psycopg2 \
-        python3-pydot \
-        python3-pypdf2 \
-        python3-qrcode \
-        python3-renderpm \
-        python3-reportlab \
-        python3-requests \
-        python3-serial \
-        python3-setuptools \
-        python3-stdnum \
-        python3-tz \
-        python3-usb \
-        python3-vobject \
-        python3-werkzeug \
-        python3-xlsxwriter \
-        python3-zeep \
-    && rm -rf /var/lib/apt/lists/*
+        adduser \
+        libldap2-dev \
+        libsasl2-dev \
+        python3-pip \
+        python3-wheel \
+        build-essential \
+        python3 -y && \
+    rm -rf /var/lib/apt/lists/*
 
 # 2. <OOW> Add 2 python dependency files and 1 debian dependency file
 
@@ -54,20 +33,16 @@ COPY extra_python_requirements.txt /extra_python_requirements.txt
 COPY extra_debian_requirements.txt /extra_debian_requirements.txt
 
 # 3. <OOW> Install Debian packages
-RUN apt-get update || true \
-    && apt-get install -y\
-    # <OOW> To allow to run pip install
-    python3-pip\
-    # <OOW> For python-ldap
-    libldap2-dev ldap-utils libsasl2-dev\
-    # <OOW> For cffi
-    build-essential libssl-dev libffi-dev python-dev\
+RUN apt-get update -qq \
+    && apt-get install -y git \
     && xargs apt-get install -y --no-install-recommends <extra_debian_requirements.txt \
     && rm -rf /var/lib/apt/lists/*
 
 # 4. <OOW> Install Python librairies
-RUN python3 -m pip install --no-cache-dir -r /odoo_python_requirements.txt
-RUN python3 -m pip install --no-cache-dir -r /extra_python_requirements.txt
+RUN pip3 install --upgrade pip \
+    && python3 -m pip install --no-cache-dir setuptools-scm \
+    && python3 -m pip install --no-cache-dir -r /odoo_python_requirements.txt \
+    && python3 -m pip install --no-cache-dir -r /extra_python_requirements.txt
 
 # 5. <OOW> Get local user id and set it to the odoo user
 ARG LOCAL_USER_ID
